# FlClash

./: CHANGELOG.md  pubspec.yaml  release.md  release.py  setup.dart
.github/workflows/: build.yaml  build.yml  change.yml
core/: action.go  common.go  hub.go  lib.go  lib_android.go  main.go  message.go  server.go  state.go  tun.go
core/state/: state.go
core/tun/: tun.go
lib/: application.dart  controller.dart  main.dart  state.dart
lib/clash/: core.dart  interface.dart  lib.dart  service.dart
lib/common/: common.dart  constant.dart  launch.dart  link.dart  lock.dart  measure.dart  navigator.dart  other.dart  path.dart  request.dart  string.dart  system.dart  windows.dart
lib/enum/: enum.dart
lib/fragments/: application_setting.dart  connections.dart  logs.dart
lib/l10n/: l10n.dart
lib/manager/: android_manager.dart  app_state_manager.dart  clash_manager.dart  message_manager.dart  tray_manager.dart  vpn_manager.dart  window_manager.dart
lib/models/: app.dart  clash_config.dart  common.dart  config.dart  ffi.dart  selector.dart
lib/pages/: editor.dart
lib/plugins/: vpn.dart
lib/widgets/: card.dart  icon.dart  input.dart  popup.dart  scaffold.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
services/helper/: Cargo.toml
services/helper/src/service/: hub.rs  mod.rs  service.rs  windows.rs
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+24 files in other folders)
