[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helper"
path = "src/main.rs"

[dependencies]
windows-service = "0.7.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
warp = "0.3.7"
bytes = "1.9.0"
serde = { version = "1.0.215", features = ["derive"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"